composer-tool/src/app/datamodel/lilyparser.ts
/* var parser = 
(function() {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof (<any>Error).captureStackTrace === "function") {
      (<any>Error).captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  (<any>peg$SyntaxError).buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { File: peg$parseFile },
        peg$startRuleFunction  = peg$parseFile,

        peg$c0 = function(ex) { return ex; },
        peg$c1 = function(music) { return {mus: music}; },
        peg$c2 = function(notes) { return {n: notes}; },
        peg$c3 = /^[ \t\n\r]/,
        peg$c4 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
        peg$c5 = function(s) { return undefined; },
        peg$c6 = "\\transpose",
        peg$c7 = peg$literalExpectation("\\transpose", false),
        peg$c8 = "\\modalTranspose",
        peg$c9 = peg$literalExpectation("\\modalTranspose", false),
        peg$c10 = "\\repeat",
        peg$c11 = peg$literalExpectation("\\repeat", false),
        peg$c12 = "unfold",
        peg$c13 = peg$literalExpectation("unfold", false),
        peg$c14 = /^[0-9]/,
        peg$c15 = peg$classExpectation([["0", "9"]], false, false),
        peg$c16 = function(no) {return {"t": "repeat"}; },
        peg$c17 = "\\score",
        peg$c18 = peg$literalExpectation("\\score", false),
        peg$c19 = function(m) { 
        		var res = {
        			t: "Score",
        			def: {
        				title: "t",
        				composer: "c",
        				author: "a",
        				subTitle: "s",
        				metadata: {}
        			},
        			children: m
        		};
        		return res;
        	},
        peg$c20 = "{",
        peg$c21 = peg$literalExpectation("{", false),
        peg$c22 = "}",
        peg$c23 = peg$literalExpectation("}", false),
        peg$c24 = function(t) { return t; },
        peg$c25 = "\\new",
        peg$c26 = peg$literalExpectation("\\new", false),
        peg$c27 = "Staff",
        peg$c28 = peg$literalExpectation("Staff", false),
        peg$c29 = function(m) { return {
        		t: "Staff",
        		def: {},
        		children: [m]
        	}; },
        peg$c30 = function(notes) { return {
        			t: "Voice",
        			def: {
        				stem: "dir"
        			},
        			children: notes // kommer underligt nok i omvendt rækkefølge
        		};
        	},
        peg$c31 = "<<",
        peg$c32 = peg$literalExpectation("<<", false),
        peg$c33 = ">>",
        peg$c34 = peg$literalExpectation(">>", false),
        peg$c35 = "\\",
        peg$c36 = peg$literalExpectation("\\", false),
        peg$c37 = /^[a-zA-Z]/,
        peg$c38 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false),
        peg$c39 = "\\numericTimeSignature",
        peg$c40 = peg$literalExpectation("\\numericTimeSignature", false),
        peg$c41 = "~",
        peg$c42 = peg$literalExpectation("~", false),
        peg$c43 = "[",
        peg$c44 = peg$literalExpectation("[", false),
        peg$c45 = "]",
        peg$c46 = peg$literalExpectation("]", false),
        peg$c47 = "\\(",
        peg$c48 = peg$literalExpectation("\\(", false),
        peg$c49 = "\\)",
        peg$c50 = peg$literalExpectation("\\)", false),
        peg$c51 = "(",
        peg$c52 = peg$literalExpectation("(", false),
        peg$c53 = ")",
        peg$c54 = peg$literalExpectation(")", false),
        peg$c55 = "|",
        peg$c56 = peg$literalExpectation("|", false),
        peg$c57 = "\\arpeggio",
        peg$c58 = peg$literalExpectation("\\arpeggio", false),
        peg$c59 = "%",
        peg$c60 = peg$literalExpectation("%", false),
        peg$c61 = /^[^\n]/,
        peg$c62 = peg$classExpectation(["\n"], true, false),
        peg$c63 = "\n",
        peg$c64 = peg$literalExpectation("\n", false),
        peg$c65 = function(c) { return { "Comment": c.join('') }; },
        peg$c66 = peg$otherExpectation("command_element_clef"),
        peg$c67 = "\\clef",
        peg$c68 = peg$literalExpectation("\\clef", false),
        peg$c69 = function(s) { return { clef: s } },
        peg$c70 = peg$otherExpectation("command_event_key"),
        peg$c71 = "\\key",
        peg$c72 = peg$literalExpectation("\\key", false),
        peg$c73 = function(s, m) { return { key: s, mode: m } },
        peg$c74 = "\\major",
        peg$c75 = peg$literalExpectation("\\major", false),
        peg$c76 = "\\minor",
        peg$c77 = peg$literalExpectation("\\minor", false),
        peg$c78 = peg$otherExpectation("command_element_time"),
        peg$c79 = "\\time",
        peg$c80 = peg$literalExpectation("\\time", false),
        peg$c81 = "/",
        peg$c82 = peg$literalExpectation("/", false),
        peg$c83 = function(s, d) { 
        	return {"t":"Meter","def":{"abs":{"num":0,"den":1},"def":{"t":"Regular","num":s,"den":d}}};
        	},
        peg$c84 = function(m) { return m },
        peg$c85 = /^[rs]/,
        peg$c86 = peg$classExpectation(["r", "s"], false, false),
        peg$c87 = function(o, d) { return {
                            t: "Note",
        					def: {
        						time: { num: 1, den: 4 },
        						abs: {num:0, den:1},
        						noteId: "n1_4",
                                rest: true
        					},
        					children: []
        					}},
        peg$c88 = function(p, o, d) { return {
                            t: "Note",
        					def: {
        						time: { num: 1, den: 4 },
        						abs: {num:0, den:1},
        						noteId: "n1_4",
        					},
        					children: [p]
        					}},
        peg$c89 = "<",
        peg$c90 = peg$literalExpectation("<", false),
        peg$c91 = ">",
        peg$c92 = peg$literalExpectation(">", false),
        peg$c93 = function(n, d) { return {
        					t: "Note",
        					def: {
        						time: { num: 1, den: 4 },
        						abs: {num:0, den:1},
        						noteId: "n1_4",
        					},
        					children: function(n){ var arr = []; for (var i = 0; i < n.length; i++) {arr.push(n[i].children[0]); } return arr; }(n)
        					}; },
        peg$c94 = function(d, dot) { return { dur: d, dots: dot } },
        peg$c95 = ".",
        peg$c96 = peg$literalExpectation(".", false),
        peg$c97 = peg$otherExpectation("pitch"),
        peg$c98 = /^[a-h]/,
        peg$c99 = peg$classExpectation([["a", "h"]], false, false),
        peg$c100 = function(pit, i) { 
        				    var alteration = "";
        					switch (i) {
                                case "is": alteration = "x"; break;
                                case "isis": alteration = "xx"; break;
                                case "es": case "s": alteration = "b"; break;
                                case "eses": case "ses": alteration = "bb"; break;
                            }
        					return {
        						t: "Notehead",
        						def: {
        							p: ['c', 'd', 'e', 'f', 'g', 'a', 'b'].indexOf(pit),
        							a: alteration,
        							forceAcc: false,
        							tie: false,
        							tieForced: false
        						}
        					};
        				},
        peg$c101 = "s",
        peg$c102 = peg$literalExpectation("s", false),
        peg$c103 = "f",
        peg$c104 = peg$literalExpectation("f", false),
        peg$c105 = "is",
        peg$c106 = peg$literalExpectation("is", false),
        peg$c107 = "es",
        peg$c108 = peg$literalExpectation("es", false),
        peg$c109 = peg$otherExpectation("sup_quotes_sub_quotes"),
        peg$c110 = /^[',]/,
        peg$c111 = peg$classExpectation(["'", ","], false, false),
        peg$c112 = function(s) { return s.join(""); },
        peg$c113 = peg$otherExpectation("relative_music"),
        peg$c114 = "\\relative",
        peg$c115 = peg$literalExpectation("\\relative", false),
        peg$c116 = function(rel, s, m) {
          	return { rel: s, mus: m }
            },
        peg$c117 = "\\version",
        peg$c118 = peg$literalExpectation("\\version", false),
        peg$c119 = function(version, s) {
          	return { version: s }
            },
        peg$c120 = "\\include",
        peg$c121 = peg$literalExpectation("\\include", false),
        peg$c122 = function(version, s) {
          	return { include: s }
            },
        peg$c123 = "\"",
        peg$c124 = peg$literalExpectation("\"", false),
        peg$c125 = peg$anyExpectation(),
        peg$c126 = function(c) { return c; },
        peg$c127 = /^[^"]/,
        peg$c128 = peg$classExpectation(["\""], true, false),
        peg$c129 = function(c) { return c },
        peg$c130 = peg$otherExpectation("whitespace"),
        peg$c131 = function(s) { return " " },
        peg$c132 = peg$otherExpectation("optional_whitespace"),
        peg$c133 = function(s) { return {"WS": s}; },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        (<any>peg$SyntaxError).buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseFile() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseExpression();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parseExpression();
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseExpression() {
      var s0, s1, s2;

      s0 = peg$parseVersion();
      if (s0 === peg$FAILED) {
        s0 = peg$parseInclude();
        if (s0 === peg$FAILED) {
          s0 = peg$parseRelative();
          if (s0 === peg$FAILED) {
            s0 = peg$parseScore();
            if (s0 === peg$FAILED) {
              s0 = peg$parseScoreThings();
              if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                s1 = peg$parseMusic();
                if (s1 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c1(s1);
                }
                s0 = s1;
                if (s0 === peg$FAILED) {
                  s0 = peg$currPos;
                  s1 = [];
                  s2 = peg$parseMusicElement();
                  if (s2 !== peg$FAILED) {
                    while (s2 !== peg$FAILED) {
                      s1.push(s2);
                      s2 = peg$parseMusicElement();
                    }
                  } else {
                    s1 = peg$FAILED;
                  }
                  if (s1 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c2(s1);
                  }
                  s0 = s1;
                  if (s0 === peg$FAILED) {
                    s0 = peg$currPos;
                    s1 = [];
                    if (peg$c3.test(input.charAt(peg$currPos))) {
                      s2 = input.charAt(peg$currPos);
                      peg$currPos++;
                    } else {
                      s2 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c4); }
                    }
                    if (s2 !== peg$FAILED) {
                      while (s2 !== peg$FAILED) {
                        s1.push(s2);
                        if (peg$c3.test(input.charAt(peg$currPos))) {
                          s2 = input.charAt(peg$currPos);
                          peg$currPos++;
                        } else {
                          s2 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$c4); }
                        }
                      }
                    } else {
                      s1 = peg$FAILED;
                    }
                    if (s1 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c5(s1);
                    }
                    s0 = s1;
                  }
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parseTransposeFunction() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 10) === peg$c6) {
        s1 = peg$c6;
        peg$currPos += 10;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c7); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseNote();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseNote();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseMusic();
              if (s5 !== peg$FAILED) {
                s6 = peg$parse_();
                if (s6 !== peg$FAILED) {
                  s1 = [s1, s2, s3, s4, s5, s6];
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.substr(peg$currPos, 15) === peg$c8) {
          s1 = peg$c8;
          peg$currPos += 15;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c9); }
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parse_();
          if (s2 !== peg$FAILED) {
            s3 = peg$parseNote();
            if (s3 !== peg$FAILED) {
              s4 = peg$parseNote();
              if (s4 !== peg$FAILED) {
                s5 = peg$parseMusic();
                if (s5 !== peg$FAILED) {
                  s6 = peg$parseMusic();
                  if (s6 !== peg$FAILED) {
                    s7 = peg$parse_();
                    if (s7 !== peg$FAILED) {
                      s1 = [s1, s2, s3, s4, s5, s6, s7];
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      }

      return s0;
    }

    function peg$parseRepeatFunction() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 7) === peg$c10) {
        s1 = peg$c10;
        peg$currPos += 7;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c11); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          if (input.substr(peg$currPos, 6) === peg$c12) {
            s3 = peg$c12;
            peg$currPos += 6;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c13); }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              s5 = [];
              if (peg$c14.test(input.charAt(peg$currPos))) {
                s6 = input.charAt(peg$currPos);
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c15); }
              }
              if (s6 !== peg$FAILED) {
                while (s6 !== peg$FAILED) {
                  s5.push(s6);
                  if (peg$c14.test(input.charAt(peg$currPos))) {
                    s6 = input.charAt(peg$currPos);
                    peg$currPos++;
                  } else {
                    s6 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c15); }
                  }
                }
              } else {
                s5 = peg$FAILED;
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parse_();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parseMusic();
                  if (s7 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c16(s5);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseScore() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 6) === peg$c17) {
        s1 = peg$c17;
        peg$currPos += 6;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c18); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseScoreMusic();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c19(s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseScoreMusic() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 123) {
        s1 = peg$c20;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c21); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse__();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parseScoreThings();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parseScoreThings();
          }
          if (s3 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 125) {
              s4 = peg$c22;
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c23); }
            }
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c24(s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseScoreThings() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 4) === peg$c25) {
        s1 = peg$c25;
        peg$currPos += 4;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c26); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          if (input.substr(peg$currPos, 5) === peg$c27) {
            s3 = peg$c27;
            peg$currPos += 5;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c28); }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseMusic();
              if (s5 !== peg$FAILED) {
                s6 = peg$parse__();
                if (s6 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c29(s5);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseMusic() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8;
